# Intellicute

./: CMakeLists.txt  ChatPage.qml  ChatView.qml  README.md  RecordButton.qml  SettingsPage.qml  TopLevel.qml  audio_recorder.cpp  audio_recorder.hpp  awesome_chatgpt_prompts.cpp  awesome_chatgpt_prompts.h  fileio.cpp  fileio.h  json_mapper.cpp  live.qml  main.cpp  main.qml  openai_message.cpp  openai_message.h  openai_message_model.cpp  openai_message_model.h  openai_request.cpp  openai_request.hpp  qml.qrc  qtquickcontrols2.conf  resources.qrc  watson_tts_request.cpp  watson_tts_request.h
android/: AndroidManifest.xml
core/: Style.qml  qmldir
